# gps_api

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml
docs/: API_CONTRACT.md  VALIDATION_svartsengi_deformation.md
src/gps_api/: __init__.py  downsample.py  main.py  schemas.py  settings.py
src/gps_api/precompute/: __init__.py  breaks.py  config.py  deformation.py  detrend.py  job.py  outliers.py  products.py  slip.py  sources.py
src/gps_api/routers/: __init__.py  deformation.py  layers.py  models.py  query.py  stations.py  velocities.py
src/gps_api/validation/: __init__.py  realdata.py
tests/: test_app.py  test_breaks_parallel.py  test_deformation.py  test_detrend_params.py  test_downsample.py  test_outlier_config_levers.py  test_outlier_config_parity.py  test_outliers_wiring.py  test_precompute.py  test_slip.py  test_validation_realdata.py
