[project]
name = "gps_api"
version = "0.1.0"
description = "Read-only FastAPI service serving precomputed GNSS analysis products (series, velocities, deformation models) for the IMO network"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
keywords = ["gps", "gnss", "geodesy", "fastapi", "geojson", "deformation", "api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "uvicorn>=0.32",
    # Store-format readers for the wired endpoints: Parquet series need
    # pyarrow; LTTB downsampling (presentation, not estimation) needs numpy.
    # Still no gps_analysis/gps_parser at API runtime (CLAUDE.md rule).
    "numpy>=2.1",
    "pyarrow>=18",
]

# Repo home: git.vedur.is (GitLab — services live there per plan §3; exact
# group TBD with the aut/ut-dev web/infra team).

[project.scripts]
gps-api = "gps_api.main:run"
gps-api-precompute = "gps_api.precompute.job:main"
gps-api-validate-deformation = "gps_api.validation.realdata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gps_api"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx2",  # starlette ≥0.5x TestClient backend (plain httpx is deprecated there)
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    {include-group = "precompute"},
]
# The precompute job (plan §3: "in gps_api or a sibling") lives in
# gps_api.precompute. Its deps stay OUT of [project.dependencies]: the API
# runtime never imports gps_analysis or gps_parser (CLAUDE.md rule) — it
# reads the store files with numpy/pyarrow only. Sibling packages are wired
# as editable local paths via [tool.uv.sources] (gps_plot precedent — see
# gpslibrary/CLAUDE.md "Editing Across Packages"); gps_analysis is on the
# analysis-lane-base branch until the lane merges.
precompute = [
    "gps_analysis",
    "gps_parser",
    "gtimes>=0.5",
    "pyyaml>=6.0",
]

[tool.uv.sources]
gps_analysis = { path = "../gps_analysis", editable = true }
gps_parser = { path = "../gps_parser", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line length handled by black
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

# Untyped ecosystem imports used only by the precompute module: gps_parser
# and gtimes ship no py.typed marker; pyarrow's inline typing is partial.
# Their objects are treated as Any at the boundary; results are coerced to
# concrete types immediately (see precompute/config.py, sources.py).
[[tool.mypy.overrides]]
module = ["gps_parser.*", "gtimes.*", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true
